--- a/app/src/main/res/drawable/ic_prime.xml
+++ b/app/src/main/res/drawable/ic_prime.xml
@@ -4,8 +4,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Star icon for prime numbers -->
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M12,2L3,7v6c0,5.55 3.84,10.74 9,12 5.16,-1.26 9,-6.45 9,-12V7l-9,-5zM12,11.99h7c-0.53,4.12 -3.28,7.79 -7,8.94V12H5V7.3l7,-3.11v8.8z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M12,17.27L18.18,21l-1.64,-7.03L22,9.24l-7.19,-0.61L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21z"/>
 </vector>
-
