--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,35 +11,37 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="72dp"
+        android:minHeight="64dp"
         android:layout_alignParentTop="true"
-        android:background="@android:color/transparent"
-        app:titleTextColor="@color/menuTextPrimary"
-        app:navigationIconTint="@color/menuTextPrimary"
+        android:background="@color/actionBarRed"
+        android:elevation="0dp"
+        app:titleTextColor="@android:color/white"
+        app:navigationIconTint="@android:color/white"
         app:titleCentered="true">
 
         <TextView
             android:id="@+id/toolbarTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:gravity="center"
-            android:background="@drawable/toolbar_pill_bg_modern"
-            android:paddingStart="28dp"
-            android:paddingEnd="28dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:minHeight="52dp"
+            android:background="@android:color/transparent"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:includeFontPadding="false"
             android:text="@string/app_name"
-            android:textColor="@color/menuTextPrimary"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-medium"
-            android:elevation="2dp"/>
+            android:textColor="@android:color/white"
+            android:textSize="22sp"
+            android:fontFamily="@font/poppins_semibold"
+            android:textStyle="normal"
+            android:letterSpacing="0.05"
+            android:elevation="0dp"/>
     </com.google.android.material.appbar.MaterialToolbar>
 
     <ScrollView
@@ -72,6 +74,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m1"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_table"
                     app:iconGravity="start"
@@ -84,6 +89,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m2"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_addition"
                     app:iconGravity="start"
@@ -104,6 +112,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m3"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_subtraction"
                     app:iconGravity="start"
@@ -116,6 +127,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m4"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_multiplication"
                     app:iconGravity="start"
@@ -136,6 +150,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m5"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_division"
                     app:iconGravity="start"
@@ -148,6 +165,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m6"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_ascending"
                     app:iconGravity="start"
@@ -168,6 +188,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m7"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_descending"
                     app:iconGravity="start"
@@ -180,6 +203,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m8"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_lcm"
                     app:iconGravity="start"
@@ -200,6 +226,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m9"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_hcf"
                     app:iconGravity="start"
@@ -212,6 +241,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m10"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_square"
                     app:iconGravity="start"
@@ -232,6 +264,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m11"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_cube"
                     app:iconGravity="start"
@@ -244,6 +279,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m12"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_square_root"
                     app:iconGravity="start"
@@ -264,6 +302,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m13"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_cube_root"
                     app:iconGravity="start"
@@ -276,6 +317,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m14"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_even"
                     app:iconGravity="start"
@@ -296,6 +340,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m15"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginEnd="6dp"
                     app:icon="@drawable/ic_odd"
                     app:iconGravity="start"
@@ -308,6 +355,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/m16"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/inter_medium"
+                    android:letterSpacing="0.02"
                     android:layout_marginStart="6dp"
                     app:icon="@drawable/ic_prime"
                     app:iconGravity="start"
