--- a/app/src/main/res/drawable/ic_ascending.xml
+++ b/app/src/main/res/drawable/ic_ascending.xml
@@ -4,8 +4,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Chart/Graph trending upward -->
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M4,18h4v-4h-4v4zM4,13h4v-4h-4v4zM4,8h4v-4h-4v4zM9,18h4v-4h-4v4zM9,13h4v-4h-4v4zM14,13h4v-4h-4v4zM14,18h4v-4h-4v4zM19,8v10h-4v-10l-1.5,1.5l-1.42,-1.42l3.42,-3.42l3.42,3.42l-1.42,1.42l-1.5,-1.5z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M16,6l2.29,2.29 -4.88,4.88 -4,-4L2,16.59 3.41,18l6,-6 4,4 6.3,-6.29L22,12V6z"/>
 </vector>
-
