--- a/app/src/main/res/drawable/ic_cube.xml
+++ b/app/src/main/res/drawable/ic_cube.xml
@@ -4,8 +4,11 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- 3D Cube shape -->
     <path
-        android:fillColor="#1976D2"
+        android:fillColor="#5F6368"
         android:pathData="M21,16.5c0,0.38 -0.21,0.71 -0.53,0.88l-7.9,4.44c-0.16,0.09 -0.34,0.13 -0.57,0.13 -0.23,0 -0.41,-0.04 -0.57,-0.13l-7.9,-4.44C3.21,17.21 3,16.88 3,16.5v-9c0,-0.38 0.21,-0.71 0.53,-0.88l7.9,-4.44c0.16,-0.09 0.34,-0.13 0.57,-0.13 0.23,0 0.41,0.04 0.57,0.13l7.9,4.44c0.32,0.17 0.53,0.5 0.53,0.88v9zM12,4.15L6.04,7.5 12,10.85l5.96,-3.35L12,4.15zM5,15.91l6,3.38v-6.71L5,9.21v6.7zM19,15.91v-6.7l-6,3.37v6.71l6,-3.38z"/>
+    <path
+        android:fillColor="#5F6368"
+        android:pathData="M19,5h1.5v1.5H19v1.5h-1.5V6.5H16V5h1.5V3.5H19z"/>
 </vector>
-
