--- a/app/src/main/res/drawable/ic_descending.xml
+++ b/app/src/main/res/drawable/ic_descending.xml
@@ -4,8 +4,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Chart/Graph trending downward -->
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M4,8h4v-4h-4v4zM4,13h4v-4h-4v4zM4,18h4v-4h-4v4zM9,8h4v-4h-4v4zM9,13h4v-4h-4v4zM14,8h4v-4h-4v4zM14,13h4v-4h-4v4zM19,14v-10h-4v10l-1.5,-1.5l-1.42,1.42l3.42,3.42l3.42,-3.42l-1.42,-1.42l-1.5,1.5z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M16,18l2.29,-2.29 -4.88,-4.88 -4,4L2,7.41 3.41,6l6,6 4,-4 6.3,6.29L22,12v6z"/>
 </vector>
-
