--- a/app/src/main/res/drawable/ic_hcf.xml
+++ b/app/src/main/res/drawable/ic_hcf.xml
@@ -4,8 +4,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Abacus/calculation icon for HCF/GCD -->
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-6h2v6zM13,9h-2V7h2v2z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M19,3H5C3.9,3 3,3.9 3,5v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V5C21,3.9 20.1,3 19,3zM8,17c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S8.55,17 8,17zM8,13c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S8.55,13 8,13zM8,9C7.45,9 7,8.55 7,8s0.45,-1 1,-1s1,0.45 1,1S8.55,9 8,9zM12,17c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S12.55,17 12,17zM12,13c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S12.55,13 12,13zM12,9c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S12.55,9 12,9zM16,17c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S16.55,17 16,17zM16,13c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S16.55,13 16,13zM16,9c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S16.55,9 16,9z"/>
 </vector>
-
