--- a/app/src/main/res/drawable/ic_lcm.xml
+++ b/app/src/main/res/drawable/ic_lcm.xml
@@ -4,8 +4,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Numbers/Calculator icon for LCM -->
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M3,6h4v12h-4v-12zM9,6h4v12h-4v-12zM15,9h6v2h-6v-2zM15,13h6v2h-6v-2z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M19,3H5C3.9,3 3,3.9 3,5v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V5C21,3.9 20.1,3 19,3zM9,17H7v-2h2V17zM9,13H7v-2h2V13zM9,9H7V7h2V9zM13,17h-2v-2h2V17zM13,13h-2v-2h2V13zM13,9h-2V7h2V9zM17,17h-2v-6h2V17zM17,9h-2V7h2V9z"/>
 </vector>
-
