--- a/app/src/main/res/drawable/ic_odd.xml
+++ b/app/src/main/res/drawable/ic_odd.xml
@@ -4,8 +4,11 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Diamond/gem shape for odd numbers -->
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M9,8c-1.1,0 -2,0.9 -2,2v4c0,1.1 0.9,2 2,2h2c1.1,0 2,-0.9 2,-2v-4c0,-1.1 -0.9,-2 -2,-2h-2zM9,14v-4h2v4h-2zM15,8h3c1.1,0 2,0.9 2,2v4c0,1.1 -0.9,2 -2,2h-3v-8zM17,14v-4h1v4h-1z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M12,2L2,12l10,10 10,-10L12,2zM12,4.83L19.17,12 12,19.17 4.83,12 12,4.83z"/>
+    <path
+        android:fillColor="#5F6368"
+        android:pathData="M12,8l-4,4 4,4 4,-4z"/>
 </vector>
-
