--- a/app/src/main/res/drawable/ic_square.xml
+++ b/app/src/main/res/drawable/ic_square.xml
@@ -4,11 +4,11 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Square shape with x² notation -->
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M4,4h16v16h-16z M6,6v12h12v-12z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M19,5v14H5V5H19M19,3H5C3.9,3 3,3.9 3,5v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V5C21,3.9 20.1,3 19,3z"/>
     <path
-        android:fillColor="#1976D2"
-        android:pathData="M17,7h1.5v1.5h-1.5z M17,9h1.5v1.5h-1.5z"/>
+        android:fillColor="#5F6368"
+        android:pathData="M17,7h1.5v1.5H17v1.5h-1.5V8.5h-1.5V7h1.5V5.5H17z"/>
 </vector>
-
