--- a/app/src/main/res/drawable/menu_card_button_bg.xml
+++ b/app/src/main/res/drawable/menu_card_button_bg.xml
@@ -2,22 +2,12 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/menuCardRipple">
     <item>
-        <layer-list>
-            <item>
-                <shape android:shape="rectangle">
-                    <solid android:color="@color/menuCardBackground" />
-                    <corners android:radius="20dp" />
-                </shape>
-            </item>
-            <!-- Subtle shadow effect -->
-            <item android:top="1dp">
-                <shape android:shape="rectangle">
-                    <solid android:color="@color/menuCardBackground" />
-                    <corners android:radius="20dp" />
-                    <stroke android:width="1dp" android:color="@color/menuCardStroke" />
-                </shape>
-            </item>
-        </layer-list>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/menuCardBackground" />
+            <corners android:radius="12dp" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/menuCardStroke" />
+        </shape>
     </item>
 </ripple>
-
