--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -151,26 +151,34 @@
     <!-- Material 3 Main Menu Button Style -->
     <style name="Material3MenuButton" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_height">64dp</item>
+        <item name="android:minHeight">64dp</item>
+        <item name="android:maxHeight">64dp</item>
         <item name="android:background">@drawable/menu_card_button_bg</item>
         <item name="android:textColor">@color/menuTextPrimary</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:letterSpacing">0.01</item>
         <item name="android:gravity">center_vertical|start</item>
-        <item name="android:paddingStart">16dp</item>
-        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
         <item name="android:paddingTop">0dp</item>
         <item name="android:paddingBottom">0dp</item>
-        <item name="android:elevation">3dp</item>
+        <item name="android:elevation">0dp</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:backgroundTint">@null</item>
         <item name="backgroundTint">@null</item>
         <item name="iconGravity">start</item>
-        <item name="iconPadding">16dp</item>
+        <item name="iconPadding">12dp</item>
         <item name="iconTint">@color/menuIconTint</item>
-        <item name="iconSize">24dp</item>
+        <item name="iconSize">22dp</item>
         <item name="android:textAlignment">viewStart</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">false</item>
     </style>
 
 </resources>
